# ChangeLog for app-doc/kdelibs-apidocs
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/kdelibs-apidocs/ChangeLog,v 1.6 2003/02/12 03:37:42 vapier Exp $

*kdelibs-apidocs-3.1-r1 (05 Feb 2003)

  05 Feb 2003; Hannes Mehnert <hannes@gentoo.org> kdelibs-apidocs-3.1-r1.ebuild:
  fixes bug #15102, thanks to Mario Scalas <mario.scalas@libero.it>

*kdelibs-apidocs-3.1_rc6 (05 Jan 2003)

  05 Jan 2003; Hannes Mehnert <hannes@gentoo.org> kdelibs-apidocs-3.1_rc6.ebuild:
  version bump

*kdelibs-apidocs-3.1_rc5 (08 Dec 2002)

  08 Dec 2002; Hannes Mehnert <hannes@gentoo.org> kdelibs-apidocs-3.1_rc5.ebuild:
  version bump

*kdelibs-apidocs-3.1_rc3 (30 Nov 2002)

  30 Nov 2002; Hannes Mehnert <hannes@gentoo.org> ChangeLog:
  needed for kdevelop-3.0_alpha2, because kde-3.1 is not public yet

*kdelibs-apidocs-3.1 (21 Nov 2002)

  21 Nov 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  An ebuild that generates the kdelibs apidocs using doxygen.