@@ -1,12 +1,12 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/kdelibs-apidocs/kdelibs-apidocs-3.1_rc6.ebuild,v 1.2 2003/02/13 06:36:27 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/kdelibs-apidocs/kdelibs-apidocs-3.1_rc6.ebuild,v 1.3 2003/02/15 07:06:51 gerk Exp $
 
 PN=kdelibs P=$PN-$PVR inherit kde kde.org 
 
 IUSE=""
 DESCRIPTION="API documentation autogenerated from the kde-base/kdelibs package" 
-KEYWORDS="~x86"
+KEYWORDS="~x86 ppc"
 HOMEPAGE="http//developer.kde.org/"
 SLOT="3.1"
 LICENSE="GPL-2"
